# SpMVWrapper

./: .gitignore  CMakeLists.txt  build.bat
cases/: demo.json  matrices.json
cmake/: FindMKL.cmake  FindVTune.cmake
dependencies/: .gitignore  CMakeLists.txt
include/: benchmark.h  benchmark_result.h  benchmark_setting.h  json_io.h  json_reader.h  matrix_info.h  mkl_spmv.h  vtune.h  wrapper.h
scripts/: calc_performance.py  run_demo.bat  time.json
src/: CMakeLists.txt  benchmark.cu  json_io.cpp  json_reader.cpp  mkl_spmv.cpp  spmv_ctl.cpp
